# mdcraft

./: .coverage  .gitignore  .readthedocs.yaml  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_minimal.txt
.github/workflows/: ci.yml  joss.yml
_testing/: lammps_reader.py  netcdf_reader.py
assets/: logo.ipynb
docs/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: api.doctree  index.doctree
docs/.doctrees/api/: mdcraft.algorithm.accelerated.cosine_sum_1d.doctree  mdcraft.algorithm.accelerated.cosine_sum_2d.doctree  mdcraft.algorithm.accelerated.cosine_sum_inplace_2d.doctree  mdcraft.algorithm.accelerated.cosine_sum_inplace_parallel_2d.doctree  mdcraft.algorithm.accelerated.cosine_sum_parallel_2d.doctree  mdcraft.algorithm.accelerated.delta_fourier_transform_1d_1d.doctree  mdcraft.algorithm.accelerated.delta_fourier_transform_sum_2d_2d.doctree  mdcraft.algorithm.accelerated.delta_fourier_transform_sum_parallel_2d_2d.doctree  mdcraft.algorithm.accelerated.doctree  mdcraft.algorithm.accelerated.dot_1d_1d.doctree  mdcraft.algorithm.accelerated.inner_2d_2d.doctree  mdcraft.algorithm.accelerated.inner_parallel_2d_2d.doctree  mdcraft.algorithm.accelerated.pythagorean_trigonometric_identity_1d.doctree  mdcraft.algorithm.accelerated.pythagorean_trigonometric_identity_1d_1d.doctree  mdcraft.algorithm.accelerated.sine_sum_1d.doctree  mdcraft.algorithm.accelerated.sine_sum_2d.doctree  mdcraft.algorithm.accelerated.sine_sum_inplace_2d.doctree  mdcraft.algorithm.accelerated.sine_sum_parallel_2d.doctree  (+150 more)
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/api/: mdcraft.algorithm.accelerated.cosine_sum_1d.html  mdcraft.algorithm.accelerated.cosine_sum_2d.html  mdcraft.algorithm.accelerated.cosine_sum_inplace_2d.html  mdcraft.algorithm.accelerated.cosine_sum_inplace_parallel_2d.html  mdcraft.algorithm.accelerated.cosine_sum_parallel_2d.html  mdcraft.algorithm.accelerated.delta_fourier_transform_1d_1d.html  mdcraft.algorithm.accelerated.delta_fourier_transform_sum_2d_2d.html  mdcraft.algorithm.accelerated.delta_fourier_transform_sum_parallel_2d_2d.html  mdcraft.algorithm.accelerated.dot_1d_1d.html  mdcraft.algorithm.accelerated.html  mdcraft.algorithm.accelerated.inner_2d_2d.html  mdcraft.algorithm.accelerated.inner_parallel_2d_2d.html  mdcraft.algorithm.accelerated.pythagorean_trigonometric_identity_1d.html  mdcraft.algorithm.accelerated.pythagorean_trigonometric_identity_1d_1d.html  mdcraft.algorithm.accelerated.sine_sum_1d.html  mdcraft.algorithm.accelerated.sine_sum_2d.html  mdcraft.algorithm.accelerated.sine_sum_inplace_2d.html  mdcraft.algorithm.accelerated.sine_sum_inplace_parallel_2d.html  mdcraft.algorithm.accelerated.sine_sum_parallel_2d.html  mdcraft.algorithm.correlation.correlation_fft.html  mdcraft.algorithm.correlation.correlation_shift.html  mdcraft.algorithm.correlation.html  mdcraft.algorithm.correlation.msd_fft.html  mdcraft.algorithm.correlation.msd_shift.html  mdcraft.algorithm.html  mdcraft.algorithm.molecule.center_of_mass.html  mdcraft.algorithm.molecule.html  mdcraft.algorithm.molecule.radius_of_gyration.html  mdcraft.algorithm.topology.create_atoms.html  mdcraft.algorithm.topology.html  mdcraft.algorithm.topology.unwrap.html  mdcraft.algorithm.topology.unwrap_edge.html  mdcraft.algorithm.topology.wrap.html  mdcraft.algorithm.unit.get_lj_scaling_factors.html  mdcraft.algorithm.unit.get_scaling_factors.html  mdcraft.algorithm.unit.html  mdcraft.algorithm.unit.strip_unit.html  mdcraft.algorithm.utility.depth_first_search.html  mdcraft.algorithm.utility.find_connected_nodes.html  mdcraft.algorithm.utility.get_closest_factors.html  (+128 more)
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
lib/lammps-fix-imagecharges/: README.md  fix_imagecharges.cpp  fix_imagecharges.h
lib/openmm-ic-plugin/: CMakeCache.txt  CMakeLists.txt  README.md
lib/openmm-ic-plugin/openmmapi/include/: ICDrudeLangevinIntegrator.h  ICKernels.h  ICLangevinIntegrator.h  OpenMMIC.h
lib/openmm-ic-plugin/openmmapi/include/internal/: windowsExportIC.h
lib/openmm-ic-plugin/openmmapi/src/: ICDrudeLangevinIntegrator.cpp  ICLangevinIntegrator.cpp
lib/openmm-ic-plugin/python/: CMakeLists.txt  icplugin.i  setup.py
lib/openmm-ic-plugin/serialization/include/: ICDrudeLangevinIntegratorProxy.h  ICLangevinIntegratorProxy.h
lib/openmm-ic-plugin/serialization/src/: ICDrudeLangevinIntegratorProxy.cpp  ICLangevinIntegratorProxy.cpp  ICSerializationProxyRegistration.cpp
paper/: paper.bib  paper.md
recipe/: meta.yaml
scripts/: build.sh  precommit.sh
src/mdcraft/: __init__.py  core.py
src/mdcraft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_algorithm_correlation.py  test_algorithm_molecule.py  test_algorithm_topology.py  test_algorithm_unit.py  test_algorithm_utility.py  test_analysis_core.py  test_analysis_electrostatics.py  test_analysis_polymer.py  test_analysis_profile.py  test_analysis_structure.py  test_analysis_transport.py  test_io_reader.py  test_openmm_file_reporter.py  test_openmm_topology.py  test_openmm_unit.py  test_utility_topology.py  test_utility_unit.py
(+262 files in other folders)
